--- a/less/common.less
+++ b/less/common.less
@@ -5,14 +5,19 @@
 }
 
 /*COLOR START*/
-
-
+@lochmaraapprox:#047BC1;
+@flamingoapprox:#F26529;
+@osloGrayapprox:#848688;
+@marinerapprox:#247abc;
+@alabasterapprox:#f9f9f9;
+@concretesolid:#f2f2f2;
+@black:#000;
+@white:#fff;
 /*COLOR END*/
 
 /*VLAUE ASSIGNMENT START*/
 
 /*VLAUE ASSIGNMENT END*/
-
 *{
 	margin: 0px;
 	padding:0px;
@@ -23,8 +28,411 @@ input::-webkit-calendar-picker-indicator {
 html,body{
 	font-size: 14px;
 }	
-html,body,div[ng-view]{
+html,body{
 	width: 100%;
 	height: 100%;
 	float: left;
+}
+.page-wrapper{
+	width:100%;
+	height:100%;
+	float:left;	
+	transition:all 0.5s ease-in;
+	&.open{
+		transform:translate3d(-5%,0px,0px;)
+	}
+}
+header{
+	.navbar{
+		padding-left:80px;
+		padding-right:80px;
+		background:none;
+		border:none;
+		margin:0px;
+		padding-top:34px;
+		.navbar-brand{
+			display:block;
+			width:228px;
+			height:92px;
+			padding:0px;
+			img{
+				width:100%;
+				height:100%;
+			}			
+		}
+
+		.navbar-right{
+			margin-top:10px;
+			li{
+				padding:0px;
+				&:last-child{
+					a{
+						padding-right:0px;
+					}					
+				}
+			}
+		}
+	}
+}
+.drawer-overlay{
+	position:fixed;
+	width:100%;
+	height:100%;
+	z-index:-1;
+	top:0px;
+	left:0px;
+	right:0px;
+	bottom:0px;
+	background:none;
+    &.open{
+    	z-index:100;
+    }
+}
+aside{
+	&.drawer{
+		position:fixed;
+		width:34%;
+		height:100%;
+		top:0px;
+		right:0px;
+		z-index:1000;
+		transition:all 0.5s ease-in;
+		transform: translate3d(100%,0px,0px);
+		padding-left:5%;
+		padding-right:5%;
+		overflow-y:auto;
+		/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#0479be+0,0577bd+100 */
+background: #0479be; /* Old browsers */
+background: -moz-linear-gradient(45deg,  #0479be 0%, #0577bd 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(45deg,  #0479be 0%,#0577bd 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(45deg,  #0479be 0%,#0577bd 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0479be', endColorstr='#0577bd',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+		&.open{
+		 transform:translate3d(0px,0px,0px);
+		 box-shadow: -5px 0px 4px 0px rgb( 4, 123, 193 );
+		 .list-cover{
+		 	ul{
+		 		li{
+		 			transform:translateX(0%);
+	 				opacity:1;
+	 				&:nth-child(1){
+						transition-delay: 0.2s;
+					}
+					&:nth-child(2){
+						transition-delay:0.3s;
+					}
+					&:nth-child(3){
+						transition-delay:0.4s;
+					}
+					&:nth-child(4){
+						transition-delay:0.5s;
+					}
+					&:nth-child(5){
+						transition-delay:0.6s;
+					}
+					&:nth-child(6){
+						transition-delay:0.7s;
+					}
+					&:nth-child(7){
+						transition-delay:0.8s;
+					}
+		 		}
+		 	}
+			.fin-start{
+				transform:translateX(0%);
+				transition-delay:0.9s;
+				opacity:1;
+			}
+			.registered{
+				transform:translateX(0%);
+				transition-delay:1s;
+				opacity:1;
+			}
+			.login{
+				transform:translateX(0%);
+				transition-delay:1.1s;
+				opacity:1;
+			}
+		 }
+		}
+		.close-btn{
+			float:left;
+			width:100%;
+			padding-top:8%;
+			padding-bottom:2%;
+			cursor:pointer;
+			p{
+				.GLOBAL_FONT_STYLE('Roboto-Medium',@white,normal);
+				font-size:14px;
+				float:right;
+				span{
+					display:inline-block;
+					&.text{
+						margin-right:10px;
+					}
+					&.close-cover{
+						position:relative;
+						width:30px;
+						height:30px;
+						.bar1{
+							position:absolute;
+							bottom:6px;
+							width:100%;
+							height:1px;
+							background-color:@white;
+							transition:all 500ms ease-in;
+							transform:rotate(0deg);
+							&.open{
+								transform:rotate(48deg);
+								opacity:1;
+								transition-delay:0.5s;
+							}
+						}
+						.bar2{
+							position:absolute;
+							bottom:6px;
+							width:100%;
+							height:1px;
+							background-color:@white;
+							transition:all 500ms ease-in;
+							transform:rotate(0deg);
+							&.open{
+								transform:rotate(-48deg);
+								opacity:1;
+								transition-delay:0.5s;
+							}
+						}
+					}
+					
+				}
+			}
+		}
+		.list-cover{
+			float:left;
+			width:100%;
+			ul{				
+				list-style-type:none;
+				li{
+					transition:all 500ms ease-in;
+					transform:translateX(-20%);
+					opacity:0;
+					
+					a{						
+						.GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@white,normal);
+				font-size:24px;
+				text-decoration:none!important;
+				transition:all 500ms ease-in;
+						&:hover{
+							opacity:0.4;
+						}
+					}
+					margin-bottom:15px;
+					&.active{
+						a{
+							opacity:0.4;
+						}
+					}
+				}
+			}
+			.registered{
+				.GLOBAL_FONT_STYLE('Roboto-Regular',@white,normal);
+				font-size:16px;
+				margin-top:26px;
+				margin-bottom:6px;
+				transition:all 500ms ease-in;
+				transform:translateX(-20%);
+				opacity:0;
+			}
+			.login{
+				.GLOBAL_FONT_STYLE('Roboto-Bold',@white,normal);
+				font-size:16px;
+				transition:all 500ms ease-in;
+				transform:translateX(-20%);
+				opacity:0;
+			}
+			.copywrite{
+				.GLOBAL_FONT_STYLE('Roboto-Light',@white,normal);
+				opacity:0.7;
+				font-size:14px;
+				margin-top:40px;
+				span{
+					display:inline-block;
+					&:first-child{
+						margin-right:5px;
+					}
+					&:last-child{
+						margin-left:5px;
+					}
+				}
+			}
+		}
+		
+	}
+}
+section{
+	width:100%;
+	float:left;
+	&.introduction{
+		padding-top:12%;
+		padding-left:10%;
+		padding-right:10%;
+		h1{
+			.GLOBAL_FONT_STYLE('Gidole-Regular',@lochmaraapprox,normal);
+			font-size:36px;
+			margin-top:0;
+			margin-bottom:15px;
+		}
+		h2{
+			.GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@flamingoapprox,normal);
+			font-size:60px;
+			margin-top:0;
+			margin-bottom:30px;
+		}
+		p{
+		.GLOBAL_FONT_STYLE('Gidole-Regular',@osloGrayapprox,light);
+			font-size:18px;
+			line-height:24px;
+			width:74%;
+		}
+		.intro-image-outer-cover{
+			position:absolute;
+			left:34%;
+			top:0px;
+			width:31%;
+			.intro-image{
+				height:100%;
+				width:100%;
+				position: relative;
+				z-index: 1;
+				img{
+					&.money-box{
+						width:100%;
+						height:100%;
+						animation: move 3s infinite alternate;
+					}				
+				}				
+			}
+			.cloud1-outer-cover{
+				width: 120px;
+				height: 60px;
+				position: absolute;
+				bottom: 25%;
+				img{
+					width:100%;
+					height:100%;
+				}
+			}
+		}
+		&:nth-child(3){
+			padding-bottom:10%;
+			h2{
+				font-size:48px;
+			}
+			.intro-img-2-cover{
+				position:relative;
+				margin-top: 50px;
+				overflow:hidden;
+			 	img.cover-image{
+			 		width:100%;
+			 	}	
+			 	.car_1{
+			 		position:absolute;
+			 		width:13%;
+			 		right:0px;
+			 		bottom:23%;
+			 		img{
+			 			width:100%;
+			 		}
+			 		animation: move-left-right 5s infinite;
+			 	}
+			 	.car_2{
+			 		position:absolute;
+					width: 16%;
+					bottom: 7%;
+					left: 19%;
+			 		img{
+			 			width:100%;
+			 		}
+			 		animation: move-right-left 5s infinite;
+			 	}				
+			}
+		}	
+		&.about-app{
+			padding-top:10%;
+			padding-bottom:10%;
+			background-color:@alabasterapprox;
+			.mobile{
+				img{
+					width:100%;
+				}
+			}
+			a{
+				display:block;
+				margin-top:40px;
+				float:left;
+			}
+		}
+	}
+}
+.fin-btn{
+	font-family:'Gidole-Regular';
+	display:block;
+	padding:27px 0px;
+	text-align:center;
+	border-radius: 40px;
+	text-decoration:none!important;
+	&.fin-works{
+		max-width:300px;
+		border:2px solid @flamingoapprox;
+		color:@flamingoapprox;
+		margin-top:59px;
+		font-weight:bold;
+	}
+	&.start-btn{
+		background: #0479bd; /* Old browsers */
+		background: -moz-linear-gradient(left,  #0479bd 0%, #0479be 100%); /* FF3.6-15 */
+		background: -webkit-linear-gradient(left,  #0479bd 0%,#0479be 100%); /* Chrome10-25,Safari5.1-6 */
+		background: linear-gradient(to right,  #0479bd 0%,#0479be 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0479bd', endColorstr='#0479be',GradientType=1 ); /* IE6-9 */
+		.GLOBAL_FONT_STYLE('Roboto-Bold',#fff,normal)!important;
+		font-size:14px;
+		min-width:150px;
+		transition:all 0.2s ease-in-out;
+		margin-right:10px;
+		&:hover{
+			box-shadow: 2.5px 4.33px 4px 0px rgb( 4, 123, 193 );
+		}
+	}
+	&.fin-start{
+		.GLOBAL_FONT_STYLE('Roboto-Bold',@lochmaraapprox,normal);
+		font-size:14px;
+		max-width:250px;
+		padding:22px 0px;
+		background-image: -moz-linear-gradient( 90deg, rgb( 245, 245, 245 ) 0%, rgb( 255, 255, 255 ) 100%);
+		background-image: -webkit-linear-gradient( 90deg, rgb( 245, 245, 245 ) 0%, rgb( 255, 255, 255 ) 100%);
+		box-shadow: 2.5px 4.33px 4px 0px rgb( 4, 123, 193 );
+		transition:all 500ms ease-in;
+		transform:translateX(-20%);
+		opacity:0;
+	}
+}
+.fin-link{
+	font-family :'Roboto-Bold';
+	font-size:14px;
+	&.log-in{
+		color:@flamingoapprox!important;
+	}
+	&.menu{
+		position:relative;
+		top:-2px;
+		color:@lochmaraapprox!important;
+		.menu-icon{
+			width:42px;
+			height:24px;
+			display:inline-block;
+			background-image:url('../images/menu.png');
+			background-repeat:no-repeat;
+			vertical-align:middle;
+		}
+	}	
 }
