--- a/less/common.less
+++ b/less/common.less
@@ -3,7 +3,9 @@
 	color: @color;
 	font-weight: @font_weight;
 }
-
+.PIXEL2EM(@px) {
+	font-size: (@px/16)+0em;
+}
 /*COLOR START*/
 @lochmaraapprox:#047BC1;
 @flamingoapprox:#F26529;
@@ -12,6 +14,7 @@
 @alabasterapprox:#f9f9f9;
 @concretesolid:#f2f2f2;
 @black:#000;
+@blackapprox:#010101;
 @white:#fff;
 /*COLOR END*/
 
@@ -375,7 +378,7 @@ section{
 	}
 }
 .fin-btn{
-	font-family:'Gidole-Regular';
+	font-family:'Roboto-Regular';
 	display:block;
 	padding:27px 0px;
 	text-align:center;
@@ -435,4 +438,53 @@ section{
 			vertical-align:middle;
 		}
 	}	
+}
+.fin-app-btn{
+	padding:4% 0px;
+	border:none;
+	outline:none;
+	background:none;
+	border-radius:25px;
+	&.fin-orange{
+		.GLOBAL_FONT_STYLE('Roboto-Bold',@white,normal);
+		.PIXEL2EM(12);
+		width:46%;
+		float:left;
+		background-color:@flamingoapprox;
+		box-shadow: 0px 1px 2px 0px #f26529;
+		&:hover{
+			box-shadow: 0px 5px 4px 0px #f26529;
+		}
+	}
+	&.fin-signIn{
+		position:relative;
+		.GLOBAL_FONT_STYLE('Roboto-Bold',@lochmaraapprox,normal);
+		.PIXEL2EM(12);
+		width:46%;
+		float:right;
+		box-shadow: 0.5px 1.33px 3px 0px #247abc;
+		background-image: -moz-linear-gradient( 90deg, rgb( 245, 245, 245 ) 0%, rgb( 255, 255, 255 ) 100%);
+		background-image: -webkit-linear-gradient( 90deg, rgb( 245, 245, 245 ) 0%, rgb( 255, 255, 255 ) 100%);
+		&:hover{
+			border:none;
+			box-shadow: 2.5px 4.33px 10px 0px #247abc;
+		}
+		.sign-img{
+			position:absolute;
+			left:8%;
+			width:25px;
+			height:25px;
+			top: 0;
+			bottom: 0;
+			margin-top: auto;
+			margin-bottom: auto;
+			img{
+				width:100%;
+				height:100%;
+			}
+			+ span{
+				margin-left:15%;
+			}
+		}
+	}
 }
