--- a/less/login.less
+++ b/less/login.less
@@ -1,5 +1,4 @@
 .login-wrapper{
-	width:33%;
 	position:fixed;
 	top:50%;
 	left:0px;
@@ -83,6 +82,20 @@
 				color:@marinerapprox;
 				opacity:0.6;
 				letter-spacing:0px;
+			}
+			.password-cover{
+				position:relative;
+				span{
+					cursor: pointer;
+					position:absolute;
+					display: inline-block;
+					top:0;
+					right:0;
+					width:5%;
+					img{
+						width: 100%;
+					}
+				}
 			}
 		}
 	}
