--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -35,22 +35,21 @@ body {
           transform: translate3d(-5%, 0px, 0px);
 }
 header .navbar {
-  padding-left: 80px;
-  padding-right: 80px;
+  padding-left: 6%;
+  padding-right: 6%;
   background: none;
   border: none;
   margin: 0px;
-  padding-top: 34px;
+  padding-top: 2%;
 }
 header .navbar .navbar-brand {
   display: block;
   width: 228px;
-  height: 92px;
+  height: auto;
   padding: 0px;
 }
 header .navbar .navbar-brand img {
   width: 100%;
-  height: 100%;
 }
 header .navbar .navbar-right {
   margin-top: 10px;
@@ -60,6 +59,30 @@ header .navbar .navbar-right li {
 }
 header .navbar .navbar-right li:last-child a {
   padding-right: 0px;
+}
+@media only screen and (max-width:768px) {
+  header .navbar {
+    padding-top: 6%;
+  }
+  header .navbar .navbar-header {
+    width: 100%;
+  }
+  header .navbar .navbar-brand {
+    width: 34%;
+  }
+  header .navbar .navbar-right {
+    position: absolute;
+    margin: 0px;
+    margin-top: 6%;
+    top: 0px;
+    right: 6%;
+  }
+  header .navbar .navbar-right .start-btn {
+    display: none;
+  }
+  header .navbar .navbar-right .log-in {
+    display: none;
+  }
 }
 .drawer-overlay {
   position: fixed;
@@ -210,7 +233,7 @@ aside.drawer .close-btn p {
   font-family: 'Roboto-Medium';
   color: #fff;
   font-weight: normal;
-  font-size: 14px;
+  font-size: 0.875em;
   float: right;
 }
 aside.drawer .close-btn p span {
@@ -304,7 +327,7 @@ aside.drawer .list-cover ul li a {
   font-family: 'PlayfairDisplay-Regular';
   color: #fff;
   font-weight: normal;
-  font-size: 24px;
+  font-size: 1.5em;
   text-decoration: none!important;
   -webkit-transition: all 500ms ease-in;
   -o-transition: all 500ms ease-in;
@@ -321,7 +344,7 @@ aside.drawer .list-cover .registered {
   font-family: 'Roboto-Regular';
   color: #fff;
   font-weight: normal;
-  font-size: 16px;
+  font-size: 1em;
   margin-top: 26px;
   margin-bottom: 6px;
   -webkit-transition: all 500ms ease-in;
@@ -339,7 +362,7 @@ aside.drawer .list-cover .login {
   font-family: 'Roboto-Bold';
   color: #fff;
   font-weight: normal;
-  font-size: 16px;
+  font-size: 1em;
   -webkit-transition: all 500ms ease-in;
   -o-transition: all 500ms ease-in;
   -moz-transition: all 500ms ease-in;
@@ -356,7 +379,7 @@ aside.drawer .list-cover .copywrite {
   color: #fff;
   font-weight: normal;
   opacity: 0.7;
-  font-size: 14px;
+  font-size: 0.875em;
   margin-top: 40px;
 }
 aside.drawer .list-cover .copywrite span {
@@ -367,6 +390,16 @@ aside.drawer .list-cover .copywrite span:first-child {
 }
 aside.drawer .list-cover .copywrite span:last-child {
   margin-left: 5px;
+}
+@media only screen and (min-width:601px) and (max-width:768px) {
+  aside.drawer {
+    width: 71%;
+  }
+}
+@media only screen and (max-width:600px) {
+  aside.drawer {
+    width: 100%;
+  }
 }
 section {
   width: 100%;
@@ -637,7 +670,6 @@ section.introduction.about-app a {
   margin-left: 15%;
 }
 .login-wrapper {
-  width: 33%;
   position: fixed;
   top: 50%;
   left: 0px;
@@ -743,6 +775,20 @@ section.introduction.about-app a {
   color: #247abc;
   opacity: 0.6;
   letter-spacing: 0px;
+}
+.login-wrapper .login-form .form-group .password-cover {
+  position: relative;
+}
+.login-wrapper .login-form .form-group .password-cover span {
+  cursor: pointer;
+  position: absolute;
+  display: inline-block;
+  top: 0;
+  right: 0;
+  width: 5%;
+}
+.login-wrapper .login-form .form-group .password-cover span img {
+  width: 100%;
 }
 .login-wrapper .login-btn-group {
   position: relative;
