--- a/app/modules/authentication/views/login.html
+++ b/app/modules/authentication/views/login.html
@@ -1,4 +1,4 @@
-<div class="login-wrapper">
+<div class="col-xs-10 col-sm-10 col-md-6 col-lg-4 login-wrapper">
 	<header class="login-header col-xs-12">
 		<div class="row">
 			<div class="cloud1"><img src="assets/images/login_cloud1.png"></div>
@@ -17,7 +17,12 @@
 				<input type="text" name="email" placeholder="Email">
 			</div>
 			<div class="form-group">
-				<input type="password" name="password" placeholder="Password">
+				<div class="col-xs-12 password-cover" ng-init="defaultType = 'password'">
+					<div class="row">
+						<input type="{{defaultType}}" name="password" placeholder="Password">
+						<span class="show-password"><img src="assets/images/showPassword.png" ng-click="((defaultType =='password')?defaultType ='text':defaultType = 'password')"></span>
+					</div>
+				</div>
 			</div>
 			<div class="login-btn-group">
 				<button class="fin-app-btn fin-orange">LOGIN</button>
