--- a/app/modules/common/views/header.html
+++ b/app/modules/common/views/header.html
@@ -5,8 +5,9 @@
           <a class="navbar-brand" href="#"><img src="assets/images/logo.png"></a>
         </div>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#" class="fin-btn start-btn">GET STARTED</a></li>
-            <li><a href="#" class="fin-link log-in">LOG IN</a></li>
+            <li ng-if="!getStarted"><a href="#/gettingStarted" class="fin-btn start-btn">GET STARTED</a></li>
+            <li ng-if="getStarted"><p>Already have an account?</p></li>
+            <li><a href="#/" class="fin-link log-in">LOG IN</a></li>
             <li><a href="javascript:void(0)" class="fin-link menu">MENU <span class="menu-icon"></span></a></li>
           </ul>
       </div>
