--- a/app/modules/authentication/views/login.html
+++ b/app/modules/authentication/views/login.html
@@ -14,12 +14,14 @@
 	<div class="login-form">
 		<form>
 			<div class="form-group">
-				<input type="text" name="email" placeholder="Email">
+				<input type="text" name="email" required>
+				<label>Email</label>
 			</div>
 			<div class="form-group">
 				<div class="col-xs-12 password-cover" ng-init="defaultType = 'password'">
 					<div class="row">
-						<input type="{{defaultType}}" name="password" placeholder="Password">
+						<input type="{{defaultType}}" name="password" required>
+						<label>Password</label>
 						<span class="show-password"><img src="assets/images/showPassword.png" ng-click="((defaultType =='password')?defaultType ='text':defaultType = 'password')"></span>
 					</div>
 				</div>
