--- a/less/common.less
+++ b/less/common.less
@@ -428,6 +428,7 @@ section{
 	text-align:center;
 	border-radius: 40px;
 	text-decoration:none!important;
+	transition:all 500ms ease-in-out;
 	&.fin-works{
 		max-width:300px;
 		border:2px solid @flamingoapprox;
@@ -466,6 +467,7 @@ section{
 .fin-link{
 	font-family :'Roboto-Bold';
 	font-size:14px;
+	transition:all 500ms ease-in-out;
 	&.log-in{
 		color:@flamingoapprox!important;
 	}
@@ -493,6 +495,7 @@ section{
 	outline:none;
 	background:none;
 	border-radius:25px;
+	transition:all 200ms ease-in-out;
 	&.fin-orange{
 		.GLOBAL_FONT_STYLE('Roboto-Bold',@white,normal);
 		.PIXEL2EM(12);
