--- a/less/main.less
+++ b/less/main.less
@@ -3,3 +3,6 @@
 @import 'login.less';
 @import 'gettingStarted.less';
 @import 'calendar.less';
+@import 'swiper.less';
+@import 'dropdown.less';
+@import 'riskassesment.less';
