--- a/app/modules/common/views/partials/calendar.html
+++ b/app/modules/common/views/partials/calendar.html
@@ -1,6 +1,7 @@
 <div class="col-xs-12">
-	<div class="pull-left calendar-cover">
-		<div class="calendar-body"  ng-style="type == 'blue' && {'background-color':'rgb( 240, 244, 247 )'} || type == 'red' && {'background-color':'#fde8de'}">
+	<div class="pull-left calendar-cover" ng-class="(type=='blue')?'addBlue':'addRed'">
+		<div ng-if="format = 'percent'" class="format">%</div>
+		<div class="calendar-body">
 			<input type="text" ng-model="model">
 		</div>
 		<div class="calendar-footer">
