--- a/less/calendar.less
+++ b/less/calendar.less
@@ -1,5 +1,6 @@
 .calendar-cover{
-	width:13%;
+	position:relative;
+	width:100%;
 	box-shadow: 2px 9px 31px -16px #257bbc;
 	border-top-left-radius: 15%;
 	border-top-right-radius: 15%;
@@ -7,20 +8,20 @@
 	border-bottom-right-radius: 15%;
 	overflow:hidden;
 	.calendar-body{
+		position:relative;
 		padding-top:10%;
 		padding-bottom:18%;
 		padding-left:4%;
 		padding-right:4%;
 		input{
+			font-family:'PlayfairDisplay-Regular';
+			font-weight:normal;
 			border:none;
 			outline:none;
 			text-align:center;
 			width:100%;
-			.GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@lochmaraapprox,normal);
 			.PIXEL2EM(72);
 			background:none;
-			color: transparent;
-			text-shadow: 0 0 0 @lochmaraapprox;
 			&:focus{
 				outline:none;
 			}
@@ -55,6 +56,55 @@
 					background-color:#d7dde4;
 				}
 			}
+			&:active{
+				top:2px;
+			}
 		}
 	}
+	.format{
+		font-family:'PlayfairDisplay-Regular';
+		font-weight:normal;
+		.PIXEL2EM(30);
+		position:absolute;
+		right:10%;
+		top:12%;
+		z-index:1;
+	}
+	&.addBlue{
+		.calendar-body{
+			background-color:rgb(240,244,247);
+			input{
+				color:@lochmaraapprox;
+			}
+		}
+		.format{
+			color:@lochmaraapprox;
+		}
+	}
+	&.addRed{
+		.calendar-body{
+			background-color:#fde8de;
+			input{
+				color: @flamingoapprox;
+			}
+		}
+		.format{
+			color:@flamingoapprox;
+		}
+	}
+}
+.calendar-divider{
+	position:relative;
+	margin-top:6%;
+	span{		
+		width:100%;
+		height:2px;
+		display:inline-block;
+		background-image: linear-gradient(to right, @marinerapprox 25%, rgba(255,255,255,0) 0%);
+		background-position: bottom;
+		background-size: 6px 2px;
+		background-repeat: repeat-x;
+		background-color:transparent;
+	}
+	
 }
