--- a/less/common.less
+++ b/less/common.less
@@ -41,6 +41,10 @@ html,body{
 	height: 100%;
 	float: left;
 }
+div[ng-view]{
+	width:100%;
+	float:left;
+}
 .page-wrapper{
 	width:100%;
 	height:100%;
@@ -273,6 +277,18 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0479be', end
 							opacity:0.4;
 						}
 					}
+					.secondLevel{
+						li{
+							margin-bottom:2%;
+							&:first-child{
+								margin-top:5%;
+							}
+							a{
+								.GLOBAL_FONT_STYLE('Roboto-Bold',@white,normal);
+								.PIXEL2EM(16);
+							}
+						}	
+					}
 				}
 			}
 			.registered{
@@ -312,6 +328,11 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0479be', end
 		}
 		@media @below600{
 			width:100%;
+		}
+		.panel{
+			background:none;
+			border:0px;
+			box-shadow:none;
 		}
 		
 	}
